@@ -43,8 +43,7 @@ import java.util.regex.Pattern;
  * Truffle VFS implementation of {@link java.nio.file.Path}.
  *
  * <p>
- * This file must be compatible with all Java versions supported by Espresso, strict Java 8
- * compatibility is required.
+ * This file must be compatible with 21+.
  */
 final class TrufflePath implements Path {
 
@@ -265,7 +264,7 @@ final class TrufflePath implements Path {
 
     @Override
     public Iterator<Path> iterator() {
-        List<String> components = Arrays.asList(getPathComponents());
+        List<String> components = List.of(getPathComponents());
         return MapFilterIterator.map(components.iterator(), s -> new TrufflePath(getTruffleFileSystem(), s));
     }
 
